tests/error/type_match/base_case_rvalue_to_lvalue_ref4.bz
function test()
{
	let _: &auto = 0;
}
